Ensure culture page image doesn't cut off the people at shorter screens

--- a/src/templates/culture/culture-page.module.scss
+++ b/src/templates/culture/culture-page.module.scss
@@ -3,6 +3,10 @@
 .page {
     padding-top: 100vh;
 
+    @media (max-height: 725px) {
+        padding-top: 725px
+    }
+
     &Hero {
         height: 100vh;
         position: absolute;
@@ -11,6 +15,10 @@
         background-size: cover !important;
         background-repeat: no-repeat !important;
         background-position: top;
+
+        @media (max-height: 725px) {
+            height: 725px
+        }
 
         &Content {
             @include container;
